# Platformer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: utils.cmake
levels/: 1.lf  2.lf  3.lf  4.lf  5.lf  test.lf
src/: coordinates.cpp  coordinates.h  layer.cpp  layer.h  level.cpp  level.h  main.cpp  player.cpp  player.h  rendering.h  screen.cpp  screen.h  view.cpp  view.h  window.cpp  window.h
